--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-# Created by https://www.gitignore.io/api/swift
-
-### Swift ###
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -43,9 +39,20 @@ playground.xcworkspace
 # Package.pins
 .build/
 
-# CocoaPods - Refactored to standalone file
+# CocoaPods
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+#
+# Pods/
 
-# Carthage - Refactored to standalone file
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build
 
 # fastlane
 #
@@ -58,11 +65,3 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
-
-### Swift.SwiftPackageManager Stack ###
-Packages
-.build
-xcuserdata
-*.xcodeproj
-
-# End of https://www.gitignore.io/api/swift
